<resources>
    <string name="app_name">MockPropertyManagmentApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prefix">pREfIX</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in_here">Log in Here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="the_best_in_property_management">The best in property management</string>
    <string name="welcome_to_prefix">Welcome to pREfIX</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="vendor_page">Vendor Page</string>
    <string name="home_page">Home Page</string>
    <string name="trip_page">Trip Page</string>
    <string name="transactions">Transactions</string>
    <string name="tenants_page">Tenants Page</string>
    <string name="property_page">Property Page</string>
    <string name="document_page">Document Page</string>
    <string name="collect_rent_page">Collect Rent Page</string>
    <string name="landlord_s_email">Landlord\'s Email</string>
    <string name="full_name">Full Name</string>
    <string name="add_property">Add Property</string>
    <string name="want_to_add_a_new_property">Want to add a new Property?</string>
    <string name="add_photo">Add Photo</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="full_name1">Full Name</string>
    <string name="already_registered">Already Registered?</string>
    <string name="add_new_property">Add New Property</string>
    <string name="add_task_for_to_do_list">Add Task for To Do List</string>
</resources>