<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_outline_deck_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:textStyle="bold"
            android:text="@string/welcome_to_prefix"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button_start_login"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/log_in"
            android:textColor="@color/colorTextWhite" />

        <Button
            android:id="@+id/button_start_sign_up"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/sign_up"
            android:textColor="@color/colorTextWhite" />
    </LinearLayout>

</RelativeLayout>